# kopuz

./: .README.md.kate-swp  .bazelrc  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dioxus.toml  Makefile  README.md  flake.nix  package-lock.json  package.json  tailwind.css
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  commit-message.yml  lint.yml
assets/: tailwind.css  themes.css
aur/: .SRCINFO  PKGBUILD
cache/: config.json  library.json
components/: Cargo.toml
components/src/: album_details.rs  bottombar.rs  fullscreen.rs  lib.rs  playlist_detail.rs  selection_bar.rs  settings_items.rs  shared.rs  showcase.rs  sidebar.rs  track_row.rs
components/src/modern/: bottombar.rs  mod.rs
components/src/normal/: bottombar.rs
config/src/: lib.rs
crates/components/: Cargo.toml
crates/components/src/: album_details.rs  back_button.rs  compact_player.rs  cover_background.rs  download_overlay.rs  fullscreen.rs  header.rs  lib.rs  lyrics_view.rs  metadata_modal.rs  navigation_controller.rs  player_controls.rs  playlist_detail.rs  playlist_modal.rs  playlist_popups.rs  queue_drag.rs  queue_list_view.rs  quick_search.rs  reorder_buttons.rs  rightbar.rs  search_bar.rs  search_genre_detail.rs  settings_items.rs  settings_popups.rs  shared.rs  showcase.rs  sort_control.rs  source_switcher.rs  stat_card.rs  titlebar.rs  track_list_view.rs  track_row.rs  view_mode_toggle.rs
crates/config/src/: lib.rs  source.rs  views.rs
crates/db/: Cargo.toml
crates/db/.sqlx/: query-180fc2bc1eff658077ab322c0de46d13fee1db67723b5c0c38d8e9f859a17f13.json  query-1a4a571619385a4960689839b2262bdb7acd04e421a9d9ab65efa2f111246df5.json  query-1abd360c5db591d1ee8abb42648f6013a2dee8b48a30ec2b7dc694650d263522.json  query-1af1b4c6f26436e765193eefb97392fff5e4cfd414481cfd633cc4440c87be21.json  query-36d0df2683fb8edf928157a40825ecdc3c6d38d9a6df9424ef201ddaa3f56fd0.json  query-479b2b9ff1b043d214f648433f81ca3e86e6c80491950892bcc545ce139218fd.json  query-57f331cd7caa671bfd20533fac3b7f5fa127c385e7933c0068f259eb1ed5d96c.json  query-910ae1b581fcc6a9c15ce3b5d8d257e420b2b5786e015d6e95bfcee8ef65fa79.json
crates/db/migrations/: 20260709000000_scrobble_queue.sql
crates/db/src/: lib.rs
crates/db/tests/: config.rs  favorites.rs  import.rs  migration.rs  persistence.rs  queries.rs  typed_queries.rs  writes.rs
crates/discord-presence/: Cargo.toml
crates/discord-presence/src/: lib.rs
crates/hooks/: Cargo.toml
crates/hooks/src/: artist_images.rs  debug_db.rs  lib.rs  player_controller_queue.rs  scrobble_scheduler.rs  source_switch.rs  use_db_queries.rs  use_player_controller.rs  use_player_task.rs  use_search_data.rs  use_sync_task.rs
crates/i18n/: Cargo.toml  build.rs
crates/i18n/locales/: ar.ftl  de.ftl  en.ftl  es.ftl  fil.ftl  fr.ftl  gr.ftl  he.ftl  hu.ftl  id.ftl  it.ftl  ja.ftl  ko.ftl  ml.ftl  nl.ftl  pl.ftl  pt-BR.ftl  pt-PT.ftl  ro.ftl  ru.ftl  sv.ftl  ta.ftl  tok-SP.ftl  tok.ftl  tr.ftl  uk.ftl  vi-VN.ftl  zh-CN.ftl
crates/i18n/src/: lib.rs
crates/kopuz/: Cargo.toml  build.rs
crates/kopuz/assets/: icon.icns  main.css  tailwind.css  themes.css
crates/kopuz/src/: app_db.rs  app_lifecycle.rs  artwork_protocol.rs  desktop_integration.rs  desktop_shell.rs  legacy.rs  logging.rs  main.rs  pot_minter.rs  (+3 more)
crates/pages/: Cargo.toml
crates/pages/src/: activity.rs  album.rs  artist.rs  favorites_body.rs  home_body.rs  lib.rs  library.rs  playlists.rs  radio.rs  settings.rs  settings_actions.rs  ytdlp.rs
crates/pages/src/local/: artist.rs  favorites.rs  home.rs  library.rs  search.rs
crates/pages/src/server/: activity.rs  album.rs  artist.rs  discover.rs  download_manager.rs  favorites.rs  home.rs  library.rs  mod.rs  playlists.rs  subsonic_sync.rs
crates/player/: Cargo.toml
crates/radio/: Cargo.toml
crates/reader/: Cargo.toml
crates/scrobble/: Cargo.toml
crates/server/: Cargo.toml
crates/server/examples/: duration_probe.rs
crates/server/src/: cover.rs  jellyfin.rs  lib.rs  server_ops.rs  soundcloud.rs  source.rs  subsonic.rs
crates/server/src/cookies/: browser.rs  signin.rs
crates/server/src/source/: youtube_music.rs
crates/server/src/ytmusic/: botguard.rs  cdp.rs  clients.rs  cookies.rs  discover.rs  innertube.rs  isolated_profile.rs  mix.rs  mod.rs  mutations.rs  player.rs  playlists.rs  search.rs  verify_session_keepalive.rs
crates/server/src/ytmusic/botguard/: mod.rs  runtime.rs
crates/server/src/ytmusic/decipher/: deno_engine.rs  mod.rs
crates/server/tests/: source.rs
crates/utils/: Cargo.toml
crates/utils/src/: artist.rs  color.rs  lib.rs  logs.rs  lyrics.rs  musicbrainz.rs  range_source.rs  stream_buffer.rs
crates/utils/src/lyrics/: cache.rs  local.rs
data/: com.temidaradev.kopuz.metainfo.xml
discord-presence/: Cargo.toml
discord-presence/src/: lib.rs
docs/: README-PT-PT.md  README-TR.md
hooks/: Cargo.toml
hooks/src/: use_player_controller.rs  use_player_task.rs
kopuz/: Cargo.toml
kopuz/assets/: tailwind.css
kopuz/src/: main.rs
locales/: ar.ftl  de.ftl  en.ftl  en.yml  es.ftl  fr.ftl  gr.ftl  he.ftl  hu.ftl  id.ftl  it.ftl  ja.ftl  ko.ftl  pl.ftl  pt-BR.ftl  ro.ftl  ru.ftl  ru.yml  tok-SP.ftl  tok.ftl  tok.yml  tr.ftl  uk.ftl  vi-VN.ftl  zh-CN.ftl
nix/: package.nix
packaging/aur/: .SRCINFO  PKGBUILD  PKGBUILD-bin
packaging/flatpak/: com.temidaradev.kopuz.json
packaging/nix/: crane.nix  shell.nix
pages/: Cargo.toml
pages/src/: album.rs  artist.rs  favorites.rs  library.rs  playlists.rs  radio.rs  settings.rs
player/: Cargo.toml
player/src/: decoder.rs
radio/src/: vocaloid.rs
reader/src/: metadata.rs  models.rs
rusic/: Cargo.toml
rusic/assets/: tailwind.css  themes.css
rusic/src/: main.rs
server/: Cargo.toml
server/src/: jellyfin.rs  provider.rs  subsonic.rs
src/: main.rs  reader.rs  utils.rs
src/components/: bottombar.rs  mod.rs  sidebar.rs  stat_card.rs  track_row.rs
src/hooks/: mod.rs  use_search_data.rs
src/pages/: home.rs  library.rs  playlists.rs  search.rs  settings.rs
src/reader/: models.rs
utils/src/: lyrics.rs  stream_buffer.rs
(+73 files in other folders)
