[package]
name = "kopuz-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[lib]
name = "utils"

[lints]
workspace = true

[dependencies]
percent-encoding = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
db = { workspace = true }
color-thief = { workspace = true }
image = { workspace = true }
urlencoding = { workspace = true }
md5 = { workspace = true }
hex = { workspace = true }
lofty = { workspace = true }
time = { workspace = true, features = ["formatting", "macros"] }

[target.'cfg(target_os = "android")'.dependencies]
base64 = { workspace = true }
